<resources>
    <string name="app_name">MyRecipes</string>
    <string name="create_main">Create Recipe</string>
    <string name="view_main">View Recipe(s)</string>
    <string name="title_main">MyRecipes</string>
    <string name="back_to_main">Main Menu</string>
    <string name="prompt_recipe_name_create">Enter recipe name</string>
    <string name="prompt_ingredient_name">Enter ingredient</string>
    <string name="title_create">Create Recipe</string>
    <string name="name_create">Recipe\nName:</string>
    <string name="save_create">Save Recipe</string>
    <string name="prompt_ingredient_amount">quantity</string>
    <string name="prompt_ingredient_units">units</string>
    <string name="add_ingredient_button">Add Ingredient</string>
    <string name="grocery_main">Grocery List</string>
    <string name="back_to_view">Back</string>
    <string name="title_view">Saved Recipe(s)</string>
    <string name="delete_uneditable">Delete</string>
    <string name="edit_uneditable">Edit</string>
    <string name="ingredient_unedit"><u>Ingredient</u></string>
    <string name="quantity_unedit"><u>Quantity</u></string>
    <string name="units_unedit"><u>Units</u></string>
    <string name="title_grocery">Grocery List</string>

</resources>