<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/create_main"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/create_main"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"/>

    <Button
        android:id="@+id/view_main"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/view_main"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_main" />

    <Button
        android:id="@+id/grocery_main"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/grocery_main"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_main" />

    <TextView
        android:id="@+id/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/title_main"
        android:textAllCaps="false"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/create_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>